--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <div class="container" id="cv">
         <div class="side">
             <div class="me">
-                <div class="portrait"></div>
+                <!-- <div class="portrait"></div> -->
+                <div class="portrait" style="background-image: url(&quot;static/image/me.jpg&quot;);"></div>
+                <!-- <img src="static/image/me.jpg"  alt="上海鲜花港 - 郁金香" /> -->
                 <div class="remodal remodal-img" data-remodal-id="portrait-modal">
                     <h3>请输入图片URL地址：</h3>
                     <br/>
