--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <ul class="experience-list">
                     <li>
                         <h3>NORTHEASTERN UNIVERSITY, BOSTON, MA, USA    2011.9-2013.6</h3>
-                        <h3>Master of Science in Computer Science</h3>
+                        <h3>Master of Science in Computer Science  GPA:3.3/4</h3>
                         <p>
                             Teaching Assistant of Object-Oriented Design
                         </p>
@@ -126,7 +126,7 @@
                     </li>
                     <li>
                         <h3>BEIJING JIAOTONG UNIVERSITY, Beijing, China    2007.9-2011.6</h3>
-                        <h3>Bachelor of Engineering in Software Engineering</h3>
+                        <h3>Bachelor of Engineering in Software Engineering  GPA:3.5/4</h3>
                         <p>
                             First Prize in National College Students Innovation Competition by Project Handheld Hearing Tester and Spectrum Analyzer 
 
